# isce2grimp

./: .gitignore  README.md  conda-lock.yml  environment.yml  pixi.toml  pyproject.toml
.github/workflows/: test.yml
data/: get_asf_inventory.py  greenland.json
isce2gimp/: __init__.py
isce2gimp/cli/: __init__.py  convert_isce.py  glo30_to_isce.py  prep_isce.py  prep_pair.py  prep_stack.py  query_inventory.py  run_isce.py  update_inventory.py
isce2gimp/data/: template-noion.yml
isce2gimp/util/: __init__.py  writeImage.py
isce2grimp/: __init__.py
isce2grimp/cli/: convert_isce.py  prep_pair.py  prep_stack.py  query_inventory.py  update_inventory.py
isce2grimp/data/: template-customion.yml  template.yml
isce2grimp/util/: dinosar.py  geodatrxa.py  myerror.py  readImage.py
tests/: test.py  test_all.py
