[tool.poetry]
name = "isce2grimp"
version = "0.0.1"
description = "InSAR Phase Processing for Greenland Ice Measures Project"
authors = ["Scott Henderson <scotty@uw.edu>"]
license = "MIT"
readme = "README.md"
homepage = "https://github.com/scottyhq/isce2grimp"
repository = "https://github.com/scottyhq/isce2grimp"
keywords = ["SAR","ISCE"]

[tool.poetry.scripts]
update_inventory = 'isce2grimp.cli.update_inventory:main'
query_inventory = 'isce2grimp.cli.query_inventory:main'
prep_pair = 'isce2grimp.cli.prep_pair:main'
prep_stack = 'isce2grimp.cli.prep_stack:main'
convert_isce = 'isce2grimp.cli.convert_isce:main'
run_isce = 'isce2grimp.cli.run_isce:main'
clean_isce = 'isce2grimp.cli.clean_isce:main'

[tool.poetry.dependencies]
python = "^3.7"

[tool.poetry.dev-dependencies]
pytest = "^5.3"

[build-system]
requires = ["poetry>=1.0"]
build-backend = "poetry.masonry.api"
