[project]
name = "isce2grimp"
requires-python = ">=3.10"
dynamic = ["version"]
description = "InSAR Phase Processing for Greenland Ice Measures Project"
authors = [{ name="Scott Henderson", email="author@example.com" }]
license = {text = "MIT License"}
readme = "README.md"
keywords = ["SAR","ISCE"]
dependencies = [
    "geopandas",
    # "isce2", # must be installed from conda-forge
    "numpy",
    "pyproj",
    "scipy",
    "pyyaml",
    ]

[project.optional-dependencies]
dev = [
    "pytest",
]

[project.urls]
homepage = "https://github.com/scottyhq/isce2grimp"
repository = "https://github.com/scottyhq/isce2grimp"

[project.scripts]
update_inventory = 'isce2grimp.cli.update_inventory:main'
query_inventory = 'isce2grimp.cli.query_inventory:main'
prep_pair = 'isce2grimp.cli.prep_pair:main'
prep_stack = 'isce2grimp.cli.prep_stack:main'
convert_isce = 'isce2grimp.cli.convert_isce:main'
run_isce = 'isce2grimp.cli.run_isce:main'
clean_isce = 'isce2grimp.cli.clean_isce:main'

[build-system]
requires = ["setuptools", "setuptools-scm"]
build-backend = "setuptools.build_meta"

[tool.setuptools_scm]
